# gameOfLife

./: CMakeLists.txt  README.md
includes/: Board.hpp  Menu.hpp  consts.hpp
src/: Board.cpp  Menu.cpp  main.cpp
